<resources>
    <string name="app_name">Vina Mobile</string>

    <!--HEADER NAVIGATION DRAWER-->
    <string name="navigation_drawer_open">Mở navigation drawer</string>
    <string name="navigation_drawer_close">Đóng navigation drawer</string>
    <string name="nav_TenKH">Tên Khách Hàng</string>
    <string name="nav_SDT">Số Điện Thoại</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings_language">Thiết lập ngôn ngữ</string>

    <!--NAVIGATION DRAWER-->
    <string name="nav_input">Nhập kho</string>
    <string name="nav_scanned">Mã hàng đã Scan</string>
    <string name="nav_inventory">Tồn kho</string>
    <string name="nav_report">Thống kê / Báo cáo</string>
    <string name="nav_account_info_title">Thông tin cá nhân</string>
    <string name="nav_account">Tài khoản</string>
    <string name="nav_logout">Đăng xuất</string>

    <!--LOGIN-->
    <string name="a1_edUser">Số điện thoại</string>
    <string name="a1_edPassword">Mật khẩu</string>
    <string name="a1_btnLogin">Đăng nhập</string>
    <string name="a1_btnCancel">Thoát</string>
    <string name="a1_chkShowPass">Hiển thị mật khẩu</string>
    <string name="a1_error_wrong_pass">Mật khẩu không đúng, hãy thử lại!</string>
    <string name="a1_error_empty">Số điện thoại hoặc mật khẩu không được để rỗng</string>
    <string name="a1_error_permissions">Bạn chưa gán quyền truy cập Số Điện Thoại \nỨng dụng không thể đăng nhập.</string>
    <string name="a1_progress_sync">Đang đồng bộ dữ liệu, vui lòng chờ....</string>

    <!--CHANGE PASSWORD-->
    <string name="a2_edUser">Số điện thoại</string>
    <string name="a2_edPassword">Mật khẩu cũ</string>
    <string name="a2_edPassword2">Mật khẩu mới</string>
    <string name="a2_edPassword3">Xác nhận mật khẩu</string>
    <string name="a2_btnChange">Thay đổi</string>
    <string name="a2_btnCancel">Hủy</string>
    <string name="a2_error_notExistsPass">Mật khẩu cũ không đúng</string>
    <string name="a2_error_donotMatch">Mật khẩu mới không khớp</string>
    <string name="a2_error_length">Độ dài mật khẩu không phù hợp</string>

    <!--BOTTOM NAVIGATION-->
    <string name="bottom_Information">Menu</string>
    <string name="bottom_Scan">Scan</string>
    <string name="bottom_Inventory">Tồn kho</string>
    <string name="bottom_Report">Thống kê</string>

    <!--MAIN ACTIVITY-->
    <string name="title_activity_main">Vina Mobile</string>
    <string name="main_confirm_logout_title_alert"> Xác nhận </string>
    <string name="main_confirm_logout_message_alert">Bạn có muốn đăng xuất ?</string>
    <string name="main_confirm_logout_button_ok_alert">Có</string>
    <string name="main_confirm_logout_button_cancel_alert">Không</string>

    <!--A4_INFORMATION-->
    <string name="a4_new_products">Sản phẩm mới</string>
    <string name="a4_error_couldnnot_fetch_json">Không thể đọc file json, vui lòng thử lại</string>
    <string name="a4_error_couldnnot_no_internet_access">Không có kết nối internet, vui lòng thử lại</string>

    <!--A3_SCAN-->
    <string name="a3_error_scan_qr_code">Scan QR Code hàng hoá nhập kho</string>
    <string name="a3_scan_session">Phiên: </string>
    <string name="a3_scan_group">Nhóm: </string>
    <string name="a3_scan_qty_group">SL / Nhóm: </string>
    <string name="a3_scan_qty_total">SL tổng: </string>
    <string name="a3_scan_title_stt">STT</string>
    <string name="a3_scan_title_product">Mã hàng</string>
    <string name="a3_scan_title_serial">Số Serial</string>

    <!--A6_MENU-->
    <string name="a6_menu_scan">Scan hàng hóa</string>
    <string name="a6_menu_products">Sản phẩm</string>
    <string name="a6_menu_report">Thống kê</string>
    <string name="a6_menu_signin">Đăng ký</string>
    <string name="a6_menu_buy">Mua hàng</string>
    <string name="a6_menu_inventory">Tồn kho</string>
    <string name="a6_menu_scan_history">Lịch sử scan</string>
    <string name="a6_menu_info">Khuyến mãi</string>
    <string name="a6_menu_customer_survey">Khảo sát KH</string>
    <string name="a6_menu_account">Đăng ký</string>

    <!--A7 PROFILE-->
    <string name="a7_form_title">Thông tin tài khoản</string>
    <string name="a7_progress_title">Thông báo</string>
    <string name="a7_progress_message">Đang tải dữ liệu, vui lòng chờ</string>

    <string name="a7_title_ngay_tao">Ngày tạo</string>
    <string name="a7_title_ngay_cn">Ngày cập nhật</string>
    <string name="a7_title_makh">Mã khách hàng</string>
    <string name="a7_title_tenkh">Tên khách hàng</string>
    <string name="a7_title_sdt">Số điện thoại</string>
    <string name="a7_title_diachi">Địa Chỉ</string>

    <string name="a7_first_tab">Đổi thông tin</string>
    <string name="a7_second_tab">Đổi mật khẩu</string>

    <!-- A9 CUSTOMER SURVEY-->
    <string name="a9_activity_title"> Khảo sát thông tin khách hàng</string>
    <string name="a9_btn_menu_new_survey"> Khảo Sát </string>
    <string name="a9_btn_menu_his_survey"> Lịch Sử </string>
    <string name="a9_btn_menu_change_survey"> Thay Đổi </string>
    <string name="a9_btn_menu_vote_survey"> Đánh giá </string>
    <!--A9 NEW SURVEY-->
    <string name="a9_title_question_type"> Chọn loại câu hỏi thực hiện khảo sát</string>
    <string name="a9_title_answer_question">Trả lời những câu hỏi sau</string>
    <string name="a9_title_img_ques_type"> Hình ảnh loại câu hỏi</string>
    <string name="a9_ques_type_choice">Trắc Nghiệm</string>
    <string name="a9_ques_type_answer">Tự Luận</string>
    <string name="a9_ques_type_rating">Đánh Giá</string>

    <!--A9 YES NO ANSWER -->
    <string name="a9_ys_answer_cancel">Hủy</string>

    <!--A9 SURVEY HISTORY -->
    <string name="a9_title_answer_history">Câu hỏi đã khảo sát</string>
    <string name="a9_title_answer">Trả lời:</string>
    <string name="a9_context_menu_change">Thay đổi</string>
    <string name="a9_context_menu_delete">Xóa</string>
    <string name="a9_context_menu_cancel">Hủy</string>
    <string name="a9_title_message_confirm_delete">Bạn muốn xóa câu trả lời ?</string>

    <!--A8 SIGN IN-->
    <string name="a8_full_name">Họ và tên</string>
    <string name="a8_phone_number">Số điện thoại</string>
    <string name="a8_date_of_birth">Ngày sinh</string>
    <string name="a8_address">Địa chỉ</string>
    <string name="a8_address_city">Thành phố</string>
    <string name="a8_address_detail">Số nhà, Đường, Phường</string>
    <string name="a8_btn_cancel">Hủy</string>
    <string name="a8_btn_signIn">Đăng ký</string>
    <string name="a8_title_select_photo">Chọn ảnh</string>
    <string name="a8_title_spinner_zone">Chọn Khu vực</string>
    <string name="a8_title_spinner_city">Chọn Tỉnh/TP</string>
    <string name="a8_title_spinner_county">Chọn Quận/Huyện</string>

    <string name="a8_error_empty_full_name">Nhập họ tên</string>
    <string name="a8_error_empty_phone_number">Nhập số điện thoại</string>
    <string name="a8_error_empty_detail_address">Nhập địa chỉ</string>
    <string name="a8_error_empty_date_of_birth">Chọn ngày sinh</string>
    <string name="a8_error_empty_zone">Chưa chọn khu vực</string>
    <string name="a8_error_empty_city">Chưa chọn Tỉnh/TP</string>
    <string name="a8_error_empty_county">Chưa chọn Quận/Huyện</string>


</resources>
