<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a1_login_background"
    android:gravity="center"
    tools:context=".A1_Login.A1_Login_Activity">

    <android.support.v7.widget.GridLayout
        android:id="@+id/gridlayout"
        android:layout_width="340dp"
        android:layout_height="360dp"
        android:layout_gravity="center"
        android:alpha="0.8"
        android:background="@drawable/a1_login_radiusgrid"
        app:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="70dp"
        tools:layout_editor_absoluteY="77dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/ll"
            android:gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/a1_login_radius_image"
                android:src="@drawable/a1_image_login" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:src="@drawable/a1_login_user" />

                <EditText
                    android:id="@+id/a1_edUsername"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/white"
                    android:enabled="true"
                    android:hint="@string/a1_edUser"
                    android:text="0941628268"
                    android:paddingLeft="10dp"
                    android:textColor="#0033FF"
                    android:textColorHint="@color/dodger_blue" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:padding="2dp"
                    android:src="@drawable/a1_login_password" />

                <EditText
                    android:id="@+id/a1_edPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="15dp"
                    android:background="@android:color/white"
                    android:hint="@string/a1_edPassword"
                    android:inputType="numberPassword"
                    android:paddingLeft="10dp"
                    android:text="123"
                    android:textColor="#0033FF"
                    android:textColorHint="@color/dodger_blue" />
            </LinearLayout>


            <CheckBox
                android:id="@+id/chkShowPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:onClick="ShowPassword"
                android:text="@string/a1_chkShowPass"
                android:textColor="@color/dodger_blue" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <Button
                    android:id="@+id/a1_btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/a1_login_radius_button"
                    android:onClick="A1_btnLogin"
                    android:text="@string/a1_btnLogin"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/a1_btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/a1_login_radius_button"
                    android:onClick="A1_btnCancel"
                    android:text="@string/a1_btnCancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20dp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.GridLayout>

</LinearLayout>